# ImMusic

./: .gitignore  CMakeLists.txt  README.md  TODO.md  app_state.h  file_system_node.h  flake.nix  main.cpp  perf.data
.direnv/: flake-profile-3-link
.github/workflows/: create-backlog-issues.yml
include/: app_settings.h  app_state.h  audio.cpp  audio.h  debug_log.h  file_tree.h  imgui_demo.cpp  network.cpp  network.h  network_fetch.h  remote_tree.h  track.h
